# SPDX-FileCopyrightText: 2025 The unpaper authors
#
# SPDX-License-Identifier: MIT

option(
  'cuda',
  type: 'feature',
  value: 'disabled',
  description: 'Enable CUDA backend support (requires OpenCV with CUDA modules)',
)

option(
  'pdf',
  type: 'feature',
  value: 'disabled',
  description: 'Enable PDF support (requires MuPDF library)',
)
