# SPDX-FileCopyrightText: 2025 The unpaper authors
#
# SPDX-License-Identifier: MIT

option(
  'cuda',
  type: 'feature',
  value: 'disabled',
  description: 'Enable CUDA backend support (requires OpenCV with CUDA modules and nvImageCodec)',
)

option(
  'pdf',
  type: 'feature',
  value: 'disabled',
  description: 'Enable PDF support (requires MuPDF library)',
)

option(
  'jbig2',
  type: 'feature',
  value: 'auto',
  description: 'Enable JBIG2 support for B&W PDF images (requires jbig2dec library)',
)
